Update to use of UserDTO record